# production-scripts

./: .gitignore  Makefile  Pipfile  README.md  __start_server__.py  __version__.py  config.json  deploy-index-productions.py  deploy-index-productions.sh  deploy-productions-index.py  deploy-productions-index.sh  heat_96ch_script.spec  leveling_config.json  pipette_leveling.csv  production_scripts.py  production_scripts.spec  pyproject.toml  requirements.txt  run_heat_96ch_script.spec  test.py  utils.py
opentrons-productions/backend/: __init__.py  app.py  deploy.sh  push-scripts.py  pyproject.toml  setting.py
opentrons-productions/backend/asserts/: opentrons_openapi.json
opentrons-productions/backend/configs/: data_analysis_specs.json
opentrons-productions/backend/datas/Flex/: robot-assembly-qc-ot3_run-26-06-04-08-56-54.csv  stress-test-qc-ot3_run-26-06-03-11-01-58.csv  z-stage-test-qc-ot3_run-26-06-02-07-49-43.csv
opentrons-productions/backend/datas/P1000-CH96/: ninety-six-assembly-qc-ot3_run-26-06-04-02-36-40_CSVReport-P1KHV3620260603A03.csv
opentrons-productions/backend/datas/P1KM/: P1KMV3520260202A02-current-speed.csv  P1KMV3520260626A02-qc - Gravimetric Raw Data.csv  gravimetric-ot3-p1000-multi.csv
opentrons-productions/backend/datas/P1KS/: P1KSV3620240909A09-qc - p1000s-grav.csv  P1KSV3620260422A17-qc - Gravimetric Raw Data.csv
opentrons-productions/backend/datas/P200-CH96/: P2HHV3220250331A02-qc - %D.csv  ninety-six-assembly-qc-ot3_run-22-04-29-15-37-36_CSVReport-P2HHV3220260509A02.csv
opentrons-productions/backend/datas/P50M/: P50MV3520260202A02-assembly-qc.csv
opentrons-productions/backend/datas/P50S/: P50SV3620240909A09-current-speed-qc.csv  P50SV3620260626A12-qc - Volume.csv
opentrons-productions/backend/docs/: add-new-upload-test.md  backend-memory-leak-mitigation-2026-07-03.md  data-center-client-new.md  test-management-plan.md  upload-config-template.md
opentrons-productions/backend/ghelper-test/: 1779072081477.yml  node_test.py  skill_config.json  skill_config.py  test.py
opentrons-productions/backend/src/: __init__.py  settings.py
opentrons-productions/backend/src/api/: models.py  routes.py
opentrons-productions/backend/src/data_analysis/: __init__.py  common.py  registry.py  robot_assembly_qc.py  service.py
opentrons-productions/backend/src/database/: mongodb.py
opentrons-productions/backend/src/slack_driver/: config.py  (+1 more)
opentrons-productions/backend/tests/: conftest.py  test_data_analysis.py  test_file_resources.py  test_robot_scan_gateways.py
(+653 files in other folders)
