[project]
name = "production-scripts"
version = "1.5.9"
description = "Production scripts for OT3 testing and related tools"
requires-python = ">=3.10,<3.11"
dependencies = [
    "crcmod>=1.7",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "paramiko>=3.4.0",
    "playsound==1.2.2",
    "inquirerpy>=0.3.4",
    "pyserial>=3.5",
    "requests>=2.28.0",
    "tqdm>=4.66.0",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
build = [
    "pyinstaller>=5.0.0",
    "setuptools>=60.0.0",
    "wheel>=0.37.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[tool.uv]
package = false
